lib/translator/test/fixtures/error/raw/repeat-condition-type.prg
PROGRAM wrong_repeat_condition_type
BEGIN
    REPEAT
    UNTIL(1)
END
